small changes in results

--- a/appendices.tex
+++ b/appendices.tex
@@ -10,9 +10,10 @@ the resulting Fabry-Pérot resonances result in the typical Fresnel-Airy functio
 \subsection{Derivation of inverse }\label{app_fresnel_inv} % TODO
 %% TODO rewrite my "cai-shalaev" notes here
 
-\section{Appendix B: Permittivity spectra of selected materials} % TODO
 
-\section{Appendix C: Scripts used for numerical simulations} % TODO
+\section{Appendix C: Scripts used for numerical simulations} 
+% TODO
+% Permittivity spectra of selected materials can be found on % TODO
 
 \section{Appendix D: Notation} % TODO
 % Preliminary
