--- a/result.tex
+++ b/result.tex
@@ -60,17 +60,16 @@ Employing the NRW method described in
 
 
 % TODO \paragraph{Transmission through a finite number of unit cells}
-% Or put everything in the theory section?
 % illustrate the band-gap formation \cite{laktionov2008}
-% (todo) FIND PYTHON SCRIPT ----> compare TMM and FDTD for metallic slabs
+% (todo) find python script ----> compare TMM and FDTD for metallic slabs
+% note the ripples inside the band-gap (for more cells)
+% and note that the NRW effective parameters do not change; the method is exact here due to absence of evanescent fields, whose detrimental effect was described in -todo-
+% finite planar structure with defect mode \cite{skoromets2013}
 %\begin{figure} \caption{1red.pdf}  \includegraphics[width=3cm]{img/multilay_1red.pdf}
                %\caption{2gn.pdf}   \includegraphics[width=3cm]{img/multilay_2gn.pdf}
                %\caption{3bu.pdf}   \includegraphics[width=3cm]{img/multilay_3bu.pdf}
                %\caption{3grey.pdf} \includegraphics[width=3cm]{img/multilay_3grey.pdf}
                %\caption{4vio.pdf}  \includegraphics[width=3cm]{img/multilay_4vio.pdf} \end{figure} \clearpage
-% note the ripples inside the band-gap (for more cells)
-% and note that the NRW effective parameters do not change; the method is exact here due to absence of evanescent fields, whose detrimental effect was described in -todo-
-% finite planar structure with defect mode \cite{skoromets2013}
 
 % TODO \paragraph{Transmission through a finite number of unit cells}
 
@@ -80,7 +79,12 @@ Employing the NRW method described in
 
 %====================================================================================================
 \section{Wire medium} \label{chap_wiremedium} % references to -> %{{{ \label{section_
+\paragraph{High-frequency behaviour}
+The structure formed from a regular square lattice of conductive wires exhibits the most interesting properties when the electric field is parallel to the wires. This polarisation will be the assumed in the following. 
 
+In the part of the spectrum where more than a half wave fits into the unit cell, i.e. above the first band, the 
+
+\paragraph{Low-frequency behaviour}
 
 \mdf{
 ref Homogenisation of nonlocal media such as wires 
