--- a/theory.tex
+++ b/theory.tex
@@ -1085,7 +1085,7 @@ In 1887, Lord Rayleigh \cite{johnson2003introduction} noticed the light reflecti
 Both effects are due to a presence of a Bragg band gap, that is, enabled by the constructive interference of the wave reflected from the layers, either of different optical properties in the Rayleigh's experiment, or composed of the atomic lattice in the X-ray case. 
 
 The very same principle was later %% who was the first?
-employed for the design and fabrication of \textit{dielectric mirrors}, which are made by stacking multiple layers of two alternating dielectrics with different wave impedances and quarter-wavelength thicknesses. They find a wide variety of applications, owing to their advantages over classical metallic mirrors such as higher reflectivity and spectral selectivity.  %% this is related to the \textit{structural colours} found in nature -- who and when did it explain?
+employed for the design and fabrication of \textit{dielectric mirrors}, which are made by stacking multiple layers of two alternating dielectrics with different wave impedances and quarter-wavelength thicknesses. They find a wide variety of applications, owing to their advantages over classical metallic mirrors such as higher reflectance and spectral selectivity.  %% this is related to the \textit{structural colours} found in nature -- who and when did it explain?
 
 Embedding one layer different from others, a \textit{defect}, into the middle of a dielectric mirror can introduce a narrow transmission window within its photonic band gap. The corresponding \textit{defect mode} is characteristic by a strong concentration the electric field $\E$ in the defect, enabling to construct narrow-band photonic filters that can be moderately tuned by the defect properties \cite{nemec2005highly}.
 
@@ -1534,7 +1534,7 @@ Restoring the physical meaning of MM cosstitutive parameters %%  \cite{alu2010}
 	%→  in polar plot: a clockwise rotating unit vector
 	%reflective surface → s11 ampli constant, phase constantly growing; (s12 zero)
 	%simple resonance (in SRR?) 
-	%→  reflectivity peak
+	%→  reflectance peak
 	%if fres1 < fres2 → …
 	%find out the difference between:
 	%two coupled broad resonances with interaction inbetween?
