--- a/conclusion.tex
+++ b/conclusion.tex
@@ -12,8 +12,6 @@
 %     --> 
 
 
-
-
 %%% TODO TODO TODO TODO TODO TODO 
 %%% Hole : Conclusion - what to put here?
 %% NOTES: What WAS discussed in the thesis and is special:
@@ -22,16 +20,18 @@
 %	often fail to cite the author of the original idea)
 %  * filled the demand for some starting overview of the common structures
 %  * unification of MM and PhC concepts, attempt for clarification of these two terms
-%  * explained the typical "antiresonance" in effective parameters, that seems to cause confusion 
-%		(http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
-%      2) excessive spatial dispersion in known structures
+%      2) excessive spatial dispersion in known structures; i.e. the eff-param spectra often 'stick' to the BZ boundary
+%		  without this interpretation, various papers fail to explain the typical "antiresonance" in effective parameters, that seems to cause confusion 
+%		  (http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
+%         stress the importance of taking the spatial dispersion into account
 %      3) the s-parameter method, although widely used, does not always give correct results
 %  * illustrated the difference of these results against CDH
-%  * stress the importance of taking the spatial dispersion into account
 %  * provide the simulation environment which facilitates correct computations, 
 %    and solves the phase-ambiguity in the s-parameter method in particular
+
+
 
 %% NOTES: What WAS NOT discussed in the thesis -- Things that could be pursued further on the basis of the presented work:
 %% * quasicrystals and disorder, 
