--- a/result.tex
+++ b/result.tex
@@ -10,7 +10,7 @@
 The one-dimensional photonic crystal (1-D PhC) has been investigated thoroughly in the previous century and found its major application as the dielectric mirror. 
 It is the simplest representative of periodic structures, since due to its continuous translational symmetry in the transverse direction, it exhibits only a subset of different phenomena that can be observed in most periodic structures. Most importantly, no \textit{individual resonances} can occur in 1-D PhC; all interaction with the wave happens through electromagnetic wave reflection (or, scattering) on the interfaces of the layers. The only type of the band gap observed is thus of the Bragg type.
 
-Dispersion curves for a one-dimensional photonic crystal, computed using PWEM, are shown in Fig. \ref{fg_1dbd}. The side plots show the shapes of the electric field in the $(y,z)$ plane,  at the respective frequencies of the band edges. The electric field was chosen to be polarized along the $x$-axis and is plotted as a color map (white corresponding to zero). For better readability that each field plot spans two unit cells. 
+Dispersion curves for a one-dimensional photonic crystal, computed using PWEM, are shown in Fig. \ref{fg_1dbd}. The side plots show the shapes of the electric field in the $(y,z)$ plane,  at the respective frequencies of the band edges. The electric field was chosen to be polarized along the $x$-axis and is plotted as a color map (white corresponding to zero). For better readability, each field plot spans two unit cells. 
 
 % todo
 Note that with the correct branch retrieval, the index of refraction never drops with frequency, except for a photonic band gap; this would otherwise imply the group velocity would be higher would propagate faster than the phase velocity.
