--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1538,7 +1538,6 @@ lts.fzu.cz/pdf/d-js.pdf
   pages = {687--702},
   month = {January},
   doi = {doi:10.1016/j.cpc.2009.11.008},
-  abstract = {This paper describes Meep, a popular free implementation of the finite-difference time-domain (FDTD) method for simulating electromagnetism. In particular, we focus on aspects of implementing a full-featured FDTD package that go beyond standard textbook descriptions of the algorithm, or ways in which Meep differs from typical FDTD implementations. These include pervasive interpolation and accurate modeling of subpixel features, advanced signal processing, support for nonlinear materials via Pad{\'{e}} approximants, and flexible scripting capabilities.}
 }
 @article{farjadpour2006improving,
   title={Improving accuracy by subpixel smoothing in the finite-difference time domain},
@@ -1605,6 +1604,13 @@ lts.fzu.cz/pdf/d-js.pdf
 	howpublished={Online},
 	url={http://www.wave-scattering.com/drudefit.html},
 	note={last visited {M}ay 2015},}
+}
+@misc{ab-initio,
+	author = {Joannopoulos, John D and Johnson, Steven G and others},
+	title = {The Joannopoulos Research Group at MIT},
+	howpublished={Online},
+	url={http://ab-initio.mit.edu/photons/index.html},
+	note={last visited {O}ctober 2015},}
 }
 @misc{dominec2014_meep_metamaterials,
 	author = {Dominec, Filip},
