--- a/t.tex
+++ b/t.tex
@@ -4,7 +4,7 @@
 \usepackage{mathrsfs} 
 \usepackage{palatino} 
 \usepackage[font=it]{caption}
-\usepackage{graphicx,amsmath,amssymb,rotating,booktabs,color,enumitem, tikz, csquotes}
+\usepackage{graphicx,amsmath,amssymb,rotating,booktabs,color,enumitem, tikz, csquotes, placeins}
 \usetikzlibrary{positioning, arrows}
 \usepackage{upgreek}
 
@@ -39,17 +39,17 @@
 \input{title.tex}
 \tableofcontents
 
-\chapter{Introduction}
-\input{intro.tex}
-
-\chapter{Theory}
-\input{theory.tex}
-
-\chapter{Numerical methods}
-\input{numeric.tex}
-
-\chapter{Experimental methods}
-\input{expe.tex}
+% \chapter{Introduction}
+% \input{intro.tex}
+% 
+% \chapter{Theory}
+% \input{theory.tex}
+% 
+% \chapter{Numerical methods}
+% \input{numeric.tex}
+% 
+% \chapter{Experimental methods}
+% \input{expe.tex}
 
 \chapter{Results}
 \input{result.tex}
