--- a/numeric.tex
+++ b/numeric.tex
@@ -343,19 +343,18 @@ where the function $\psi$ represents either of the electric or magnetic fields.
 % TODO maybe not! The Hamiltonian might be SQUARE of the "Maxwellian"!
 
 Both time- and frequency-domain simulations used for this thesis use complex numbers to represent all field components.
-Whole frequency-domain problem thus can be expressed as a simultaneous optimization of the $\E, \HH$ fields shape, so that one time-step of FDTD is identical to phase rotation of the field at the given angular frequency $\omega$. For the optimization to be as efficient as possible, the \textit{stabilized biconjugate gradient} algorithm \cite{oskooi2010meep} is used. More information on the frequency-domain solver is on the project's website. % todo cite ab-init
+Whole frequency-domain problem thus can be expressed as a simultaneous optimization of the $\E, \HH$ fields shape, so that one time-step of FDTD is identical to phase rotation of the field at the given angular frequency $\omega$. For the optimization to be as efficient as possible, the \textit{stabilized biconjugate gradient} algorithm \cite{oskooi2010meep} is used. More information on the frequency-domain solver is on the project's website \cite{ab-initio}. 
 
 The modes obtained by frequency-domain simulation can have arbitrary phase; sometimes the real part of either electric or magnetic field can be nearly zero. In such a case, the imaginary part thereof always gives sufficient amplitude to be plot accurately.
 
-
 %}}}
-\paragraph{Comparison to the time-domain computation} 
+\paragraph{Comparison to the time-domain computation} %{{{
 To verify their reliability, the results of the frequency domain simulation with frequency scanned were compared against the results from the time-domain simulation. 
 
 The advantage of the frequency-domain (FDFD) method over the time-domain (FDTD) is greater efficiency for obtaining the field shape at a single frequency, where the computational time of the time-domain methods grows proportionally with the desired spectral resolution. Having both algorithms packed in one library enables extremely easy switching between them. 
 
 For FDFD, the permittivities and conductivities of all media can be freely chosen, including negative values. A frequency scan of FDFD simulations can thus be needed, if one needs to specify arbitrary frequency dependence of the materials (which does not have to conform to Kramers-Kronig relations as required by FDTD). It was, however, observed by the author that the FDFD solver often fails to converge for plasmonics at the optical frequencies; in such cases, one has to return to the FDTD algorithm with a narrow frequency source.
-
+%}}}
 \subsection{Plane-wave expansion method} % TODO
 \paragraph{Principles of PWEM} %{{{
 Another algorithm used is the plane-wave expansion method (PWEM). This method works in the frequency domain and, being based on the eigenmode problem, its use is similar to the frequency-domain finite-difference solver (FDFD) described above, though it is based on directly solving a linear algebraic problem in contrast with the somewhat inefficient optimisation used in FDFD.
