--- a/result.tex
+++ b/result.tex
@@ -7,19 +7,29 @@
 \label{section_result}
 \section{Dielectric slab} \label{section_Dielectric slab}
 \paragraph{Dispersion curves}
+% TODO discuss the PWEM results, illustrate folding
+\begin{figure}[t] \caption{ \textbf{a)} In free space, \textbf{b)} in dielectric layers with permittivity $\varepsilon = 12$ and 15 \% thickness (outlined by black lines); side plots show the electric field in $2\times 2$ unit cells} \label{fg_1dbd} \centering 
+\textbf{a)}	\includegraphics[width=8cm]{img/Slab_eps001_PWEM.pdf}
+\textbf{b)}	\includegraphics[width=8cm]{img/Slab_eps012_d15.pdf}
+\end{figure}
+
+\begin{figure}[t] \caption{Amplitude of reflectance, transmittance and retrieved effective index of refraction for the dielectric slab of 10\% fill fraction and varied permittivity $\epsrl \in \{4,9,16\}$} \label{fg_Slab_fillfraction01_epsilon_comparison} \centering 
+\begin{tabular}{r}
+\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction01_epsilon_comparison_r.pdf}\vspace{-10.5mm}\\
+\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction01_epsilon_comparison_t.pdf}\vspace{-10.5mm}\\
+\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction01_epsilon_comparison_nr.pdf}\vspace{-10.5mm}\\
+\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction01_epsilon_comparison_ni.pdf}\vspace{-5mm}\\
+\end{tabular}
+\end{figure}
+
 The one-dimensional photonic crystal (1-D PhC) has been investigated thoroughly in the previous century and found its major application as the dielectric mirror. 
 It is the simplest representative of periodic structures, since due to its continuous translational symmetry in the transverse direction, it exhibits only a subset of different phenomena that can be observed in most periodic structures. Most importantly, no \textit{individual resonances} can occur in 1-D PhC; all interaction with the wave happens through electromagnetic wave reflection (or, scattering) on the interfaces of the layers. The only type of the band gap observed is thus of the Bragg type.
 
 Dispersion curves for a one-dimensional photonic crystal, computed using PWEM, are shown in Fig. \ref{fg_1dbd}. The side plots show the shapes of the electric field in the $(y,z)$ plane,  at the respective frequencies of the band edges. The electric field was chosen to be polarized along the $x$-axis and is plotted as a color map (white corresponding to zero). For better readability, each field plot spans two unit cells. 
 
 % todo
-Note that with the correct branch retrieval, the index of refraction never drops with frequency, except for a photonic band gap; this would otherwise imply the group velocity would be higher would propagate faster than the phase velocity.
+Note that with the correct branch retrieval, the index of refraction never drops with frequency, except for a photonic band gap; this would otherwise imply the group velocity would be higher than the phase velocity.
 
-% TODO discuss the PWEM results, illustrate folding
-\begin{figure}[ht] \caption{ \textbf{a)} In free space, \textbf{b)} in dielectric layers with permittivity $\varepsilon = 12$ and 15 \% thickness (outlined by black lines); side plots show the electric field in $2\times 2$ unit cells} \label{fg_1dbd} \centering 
-\textbf{a)}	\includegraphics[width=8cm]{img/Slab_eps001_PWEM.pdf}
-\textbf{b)}	\includegraphics[width=8cm]{img/Slab_eps012_d15.pdf}
-\end{figure}
 % TODO draw and append axes+colorbar to the field distribution plots
 % TODO visualise the permittivity, but how?
 
@@ -41,9 +51,6 @@ A condition for the \textit{Fabry-Pérot resonance} states that the reflection a
 An example class of structures that exhibit zero band-gap width are binary 1-D PhCs with equal optical thickness of both slabs. Exactly at the frequency when whole wavelength should fit into the unit cell, thus forming the second band gap, the scattered amplitude from each of the layers becomes zero.
 
 % TODO scan of spectra for unit cell filling fraction
-
-
-
 
 
 For a 1-D photonic crystal, we can generally conclude that in order to move up on the frequency axis,
@@ -77,7 +84,7 @@ Employing the NRW method described in
 
 
 
-
+\clearpage
 
 %====================================================================================================
 \section{Wire medium} \label{chap_wiremedium} % references to -> %{{{ \label{section_
@@ -155,6 +162,7 @@ In the second series of simulations, we kept the spacing $a = 100\,\upmu$m and c
 
 
 %====================================================================================================
+\FloatBarrier
 \section{Cut-wires} \label{section_cutwires} % references to -> % note about plasmonic particles 
 %% (I guess the spatial dispersion will be visible in the CDH plots)
 %% ...even here, with particles infinitesimally thin along the wave-vector, the spatial dispersion may be significant; arguably it was observed in 1970s by Merkel \cite{merkel1973simulation}, who remarks that
