--- a/result.tex
+++ b/result.tex
@@ -25,42 +25,38 @@
 The one-dimensional photonic crystal (1-D PhC) has been investigated thoroughly in the previous century and found its major application as the dielectric mirror. 
 It is the simplest representative of periodic structures, since due to its continuous translational symmetry in the transverse direction, it exhibits only a subset of different phenomena that can be observed in most periodic structures. Most importantly, no \textit{individual resonances} can occur in 1-D PhC; all interaction with the wave happens through electromagnetic wave reflection (or, scattering) on the interfaces of the layers. The only type of the band gap observed is thus of the Bragg type.
 
-Dispersion curves for a one-dimensional photonic crystal, computed using PWEM, are shown in Fig. \ref{fg_1dbd}. The side plots show the shapes of the electric field in the $(y,z)$ plane,  at the respective frequencies of the band edges. The electric field was chosen to be polarized along the $x$-axis and is plotted as a color map (white corresponding to zero). For better readability, each field plot spans two unit cells. 
+Dispersion curves for a one-dimensional photonic crystal, computed using PWEM, are shown in Fig. \ref{fg_1dbd}. The side plots show the shapes of the electric field in the plane perpendicular to it, at the frequencies of the band edges indicated by the blue arrows. 
+For better readability, each field plot spans two unit cells. 
+%The electric field was chosen to be polarized along the $x$-axis and is plotted as a color map (white corresponding to zero). 
 
-% todo
-Note that with the correct branch retrieval, the index of refraction never drops with frequency, except for a photonic band gap; this would otherwise imply the group velocity would be higher than the phase velocity.
+Fig. \ref{fg_1dbd}a shows the folded dispersion curves for a plane wave propagating in vacuum on which we imposed virtual periodicity.
+To save space, the Bloch theorem was used to plot the dispersion curves as \textit{folded}, but one can easily imagine how the curve unfolds into a linear dispersion of vacuum, know as the.\textit{light line}. No scattering occurs for homogeneous vacuum, thus for any frequency $f$ exists a real wavenumber $k$ corresponding to a propagating wave. 
 
-% TODO draw and append axes+colorbar to the field distribution plots
-% TODO visualise the permittivity, but how?
+Fig. \ref{fg_1dbd}b is obtained by introducing periodic dielectric layers. \textit{Band gaps} of nonzero width separate the allowed bands, coresponding to frequency ranges where the wave can not propagate through the structure. The first photonic band gap starts at the frequency where half wavelength matches the cell spacing, i.e. when $2\pi / K= a/2$ as is depicted in the subplot \textit{X1} of Fig. \ref{fg_1dbd}b. The next band starts at the same wavenumber $K$, but the wave now has higher frequency because in the subplot \textit{X2} of Fig. \ref{fg_1dbd}b it is shifted by half its period so that it maximizes the electric field energy that is localized in the areas of lower permittivity. Higher Bragg band gaps are formed by the same mechanism.
 
-Fig. \ref{fg_1dbd}a shows the folded dispersion curves for a plane wave propagating in vacuum.
-%As predicted by the Bloch-Floquet theorem (\ref{eq_bloch}), the fields are periodic over each cell whenever the wavenumber $k$ touches the Brillouin zone boundary. 
-To save space, we the dispersion curves as \textit{folded}, but one can easily imagine how the curve unfolds into a straight light line. For any frequency $f$, there is a wavenumber $k$ corresponding to a propagating wave. 
+At the edge between a photonic band and a band gap, the electric and magnetic fields are strictly periodic, and thus can be easily visualized. An important characteristic of each field pattern is the shape of all points where the field amplitude is constantly zero. Such sets will be denoted as \textit{nodal planes}, or also, more accurately, \textit{nodal surfaces}.
+For the Bragg resonances shown in the subplots of \ref{fg_1dbd}b, we can generally conclude that across each photonic band one nodal plane per unit cell is added, whereas across a band gap, the nodal planes change their location, but their number remains constant. 
 
-When the periodic dielectric layers are introduced, \textit{band gaps} of nonzero width open between the allowed bands as shown in Fig. \ref{fg_1dbd}b. 
-At the frequencies in a bandgap, the wave can not propagate through the structure. The first photonic band ends when half the wavelength matches the cell spacing, i.e. when $2\pi / K= a/2$. The next band starts at the same wavenumber $K$, but the wave now has higher frequency because it is shifted by half its period so that it maximizes the energy of the electric field in the areas of lower permittivity. 
 
+Such a shifting between waves at the lower and upper boundaries of the band gap is typical of classical \textit{Bragg} gaps that are responsible for the dispersion of the 1-D photonic crystal. 
 
 \paragraph{Bragg and Fabry-Pérot resonances}
 The \textit{Bragg condition} for the formation of a band gap in a periodic structure is that an integer number of half waves fits into the unit cell; i.e. that the phase difference $\phi$ of the wave along the unit cell is 
-\begin{equation} \phi = \pi m, \text{ where } m\in \mathbb{Z}. \label{eq_braggcond}\end{equation}
-The width of the band gap grows with the amplitude of the wave scattered at the interfaces.
+\begin{equation} \phi_{1+2} = d_1 n_1 \frac{\omega}{c} + d_2 n_2 \frac{\omega}{c} = \pi m, \text{ where } m\in \mathbb{Z}. \label{eq_braggcond}\end{equation}
+where $d_{1,2}$ are the thicknesses and $n_{1,2}$ are the refractive indices of the two layers.
 
-A condition for the \textit{Fabry-Pérot resonance} states that the reflection amplitude of a lossless dielectric slab is zero if an integer number of the wave fits into one slab. In the contrary, this effect reduces the width of the band gap. A special case can occur when both Bragg and Fabry-Pérot conditions are fulfilled simultaneously; then a zero-width band gap is obtained and two photonic bands 
+The width of the band gap grows with the amplitude of the wave scattered from the unit cell; this amplitude however also depends on frequency.
+The reflection amplitude of a lossless dielectric slab can become zero under a  condition for  states that if an integer number of the halfwaves fits into either of the dielectric layers. Unlike the Bragg resonance, this effect can be observed even in a single isolated unit cell; in fact it is the well known \textit{Fabry-Pérot resonance}. A special case can occur when both Bragg and Fabry-Pérot conditions are fulfilled simultaneously; then a zero-width band gap is obtained and two photonic bands are adjacent to each other just as they were in vacuum (Fig. \ref{fg_1dbd}a)
 
-An example class of structures that exhibit zero band-gap width are binary 1-D PhCs with equal optical thickness of both slabs. Exactly at the frequency when whole wavelength should fit into the unit cell, thus forming the second band gap, the scattered amplitude from each of the layers becomes zero.
+An example class of structures that exhibit zero band-gap width are binary 1-D PhCs with equal optical thickness of both slabs. Exactly at the frequency where a whole wavelength should fit into the unit cell, thus forming the second band gap, the scattered amplitude from each of the layers becomes zero. This special condition \textit{gap-less} transition between photonic bands.
 
+%\footnote{Note that the band gaps do not have the same width on the frequency scale. For a certain thickness of the high-dielectric layer that corresponds to the Fabry-Pérot resonance, no frequency difference at all results from shifting the wave. In this case the band gap attains zero thickness, as is illustrated in Fig. \ref{fg_ebar_radiusscan}a for $r\approx20\,\upmu$m and $f\approx1.6$ THz. In other words, there may be }}
 % TODO scan of spectra for unit cell filling fraction
 
 
-For a 1-D photonic crystal, we can generally conclude that in order to move up on the frequency axis,
-\begin{enumerate}
- \item{within each photonic band, one nodal plane per unit cell is added
-} 
- \item{within each photonic band gap, the wave shifts the most of electric field energy into lower-permittivity medium\footnote{Note that the band gaps do not have the same width on the frequency scale. For a certain thickness of the high-dielectric layer that corresponds to the Fabry-Pérot resonance, no frequency difference at all results from shifting the wave. In this case the band gap attains zero thickness, as is illustrated in Fig. \ref{fg_ebar_radiusscan}a for $r\approx20\,\upmu$m and $f\approx1.6$ THz. In other words, there may be a \textit{gap-less} transition between photonic bands.}, while the number of nodal planes remains constant. }
- \end{enumerate}
+% todo
+Note that with the correct branch retrieval, the index of refraction never drops with frequency, except for the photonic band gaps; this would otherwise imply the group velocity would be higher than the phase velocity.
 
-Such a shifting between waves at the lower and upper boundaries of the band gap is typical of classical \textit{Bragg} gaps that are responsible for the dispersion of the 1-D photonic crystal. 
 
 
 \paragraph{Effective parameters of a 1-D PhC}
