--- a/result.tex
+++ b/result.tex
@@ -13,12 +13,12 @@
 \textbf{b)}	\includegraphics[width=8cm]{img/Slab_eps012_d15.pdf}
 \end{figure}
 
-\begin{figure}[t] \caption{Amplitude of reflectance, transmittance and retrieved effective index of refraction for the dielectric slab of 10\% fill fraction and varied permittivity $\epsrl \in \{4,9,16\}$} \label{fg_Slab_fillfraction01_epsilon_comparison} \centering 
+\begin{figure}[t] \caption{Amplitude of reflectance, transmittance and retrieved effective index of refraction for the dielectric slab of 10\% fill fraction and varied permittivity $\epsrl \in \{4,9,16\}$} \label{fg_Slab_fillfraction015_epsilon_comparison} \centering 
 \begin{tabular}{r}
-\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction01_epsilon_comparison_r.pdf}\vspace{-10.5mm}\\
-\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction01_epsilon_comparison_t.pdf}\vspace{-10.5mm}\\
-\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction01_epsilon_comparison_nr.pdf}\vspace{-10.5mm}\\
-\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction01_epsilon_comparison_ni.pdf}\vspace{-5mm}\\
+\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction015_epsilon_comparison_r.pdf}\vspace{-10.5mm}\\
+\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction015_epsilon_comparison_t.pdf}\vspace{-10.5mm}\\
+\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction015_epsilon_comparison_nr.pdf}\vspace{-10.5mm}\\
+\includegraphics[width=0.85\textwidth]{img-meep/Slab_fillfraction015_epsilon_comparison_ni.pdf}\vspace{-5mm}\\
 \end{tabular}
 \end{figure}
 
@@ -29,10 +29,9 @@ Dispersion curves for a one-dimensional photonic crystal, computed using PWEM, a
 For better readability, each field plot spans two unit cells. 
 %The electric field was chosen to be polarized along the $x$-axis and is plotted as a color map (white corresponding to zero). 
 
-Fig. \ref{fg_1dbd}a shows the folded dispersion curves for a plane wave propagating in vacuum on which we imposed virtual periodicity.
-To save space, the Bloch theorem was used to plot the dispersion curves as \textit{folded}, but one can easily imagine how the curve unfolds into a linear dispersion of vacuum, know as the.\textit{light line}. No scattering occurs for homogeneous vacuum, thus for any frequency $f$ exists a real wavenumber $k$ corresponding to a propagating wave. 
+Fig. \ref{fg_1dbd}a shows the folded dispersion curves for a plane wave propagating in vacuum on which we imposed virtual periodicity. To save space the dispersion curves were plotted as \textit{folded}, but one can easily imagine how the curve unfolds into a linear dispersion of vacuum, known as the \textit{light line}. No scattering occurs for homogeneous vacuum, thus for any frequency $f$ exists a real wavenumber $k$ corresponding to a propagating wave and there are no band gaps of finite width. 
 
-Fig. \ref{fg_1dbd}b is obtained by introducing periodic dielectric layers. \textit{Band gaps} of nonzero width separate the allowed bands, coresponding to frequency ranges where the wave can not propagate through the structure. The first photonic band gap starts at the frequency where half wavelength matches the cell spacing, i.e. when $2\pi / K= a/2$ as is depicted in the subplot \textit{X1} of Fig. \ref{fg_1dbd}b. The next band starts at the same wavenumber $K$, but the wave now has higher frequency because in the subplot \textit{X2} of Fig. \ref{fg_1dbd}b it is shifted by half its period so that it maximizes the electric field energy that is localized in the areas of lower permittivity. Higher Bragg band gaps are formed by the same mechanism.
+Next to it, Fig. \ref{fg_1dbd}b is obtained by introducing periodic dielectric layers of 15\% filling fraction, outlined by thin black lines. \textit{Band gaps} of nonzero width separate the allowed bands, coresponding to frequency ranges where the wave can not propagate through the structure. The first photonic band gap starts at the frequency where half wavelength matches the cell spacing, i.e. when $2\pi / K= a/2$ as is depicted in the subplot \textit{X1} of Fig. \ref{fg_1dbd}b. The next band starts at the same wavenumber $K$, but the wave now has higher frequency because in the subplot \textit{X2} of Fig. \ref{fg_1dbd}b it is shifted by half its period so that it maximizes the electric field energy that is localized in the areas of lower permittivity. Higher Bragg band gaps are formed by the same mechanism.
 
 At the edge between a photonic band and a band gap, the electric and magnetic fields are strictly periodic, and thus can be easily visualized. An important characteristic of each field pattern is the shape of all points where the field amplitude is constantly zero. Such sets will be denoted as \textit{nodal planes}, or also, more accurately, \textit{nodal surfaces}.
 For the Bragg resonances shown in the subplots of \ref{fg_1dbd}b, we can generally conclude that across each photonic band one nodal plane per unit cell is added, whereas across a band gap, the nodal planes change their location, but their number remains constant. 
@@ -41,26 +40,28 @@ For the Bragg resonances shown in the subplots of \ref{fg_1dbd}b, we can general
 Such a shifting between waves at the lower and upper boundaries of the band gap is typical of classical \textit{Bragg} gaps that are responsible for the dispersion of the 1-D photonic crystal. 
 
 \paragraph{Bragg and Fabry-Pérot resonances}
-The \textit{Bragg condition} for the formation of a band gap in a periodic structure is that an integer number of half waves fits into the unit cell; i.e. that the phase difference $\phi$ of the wave along the unit cell is 
+The \textit{Bragg condition} for the formation of a band gap in a periodic structure is that an integer number of half waves fits into the unit cell; i.e. that the phase difference $\phi_{1+2}$ of the wave along the unit cell is 
 \begin{equation} \phi_{1+2} = d_1 n_1 \frac{\omega}{c} + d_2 n_2 \frac{\omega}{c} = \pi m, \text{ where } m\in \mathbb{Z}. \label{eq_braggcond}\end{equation}
 where $d_{1,2}$ are the thicknesses and $n_{1,2}$ are the refractive indices of the two layers.
 
 The width of the band gap grows with the amplitude of the wave scattered from the unit cell; this amplitude however also depends on frequency.
-The reflection amplitude of a lossless dielectric slab can become zero under a  condition for  states that if an integer number of the halfwaves fits into either of the dielectric layers. Unlike the Bragg resonance, this effect can be observed even in a single isolated unit cell; in fact it is the well known \textit{Fabry-Pérot resonance}. A special case can occur when both Bragg and Fabry-Pérot conditions are fulfilled simultaneously; then a zero-width band gap is obtained and two photonic bands are adjacent to each other just as they were in vacuum (Fig. \ref{fg_1dbd}a)
+The reflection amplitude of a lossless dielectric slab can become zero under a  condition for  states that if an integer number of the halfwaves fits into either of the dielectric layers, that is
+\begin{equation} \phi_{1} = d_1 n_1 \frac{\omega}{c} = \pi m \text{\quad or \quad} \phi_{2} = d_2 n_2 \frac{\omega}{c} = \pi m, \text{ where } m\in \mathbb{Z}. \label{eq_fpcond}\end{equation}
+Unlike the Bragg resonance, this effect can be observed even in a single isolated unit cell; in fact it is the well known \textit{Fabry-Pérot resonance}. A special case can occur when the conditions for both Bragg and Fabry-Pérot resonances are fulfilled simultaneously: a \textit{zero-width band gap} is obtained and two photonic bands are adjacent to each other just as they were in vacuum (Fig. \ref{fg_1dbd}a). A simplest example of a structure that exhibits a zero-width band gap is the 1-D PhC with equal optical thickness of both slabs $d_1 n_1 = d_2 n_2$. 
 
-An example class of structures that exhibit zero band-gap width are binary 1-D PhCs with equal optical thickness of both slabs. Exactly at the frequency where a whole wavelength should fit into the unit cell, thus forming the second band gap, the scattered amplitude from each of the layers becomes zero. This special condition \textit{gap-less} transition between photonic bands.
+% NOTE that PWEM gives results in natural units. The natural unit of frequency is defined as that at which exactly one wavelength fits into the unit cell size if it contains empty vacuum.
 
 %\footnote{Note that the band gaps do not have the same width on the frequency scale. For a certain thickness of the high-dielectric layer that corresponds to the Fabry-Pérot resonance, no frequency difference at all results from shifting the wave. In this case the band gap attains zero thickness, as is illustrated in Fig. \ref{fg_ebar_radiusscan}a for $r\approx20\,\upmu$m and $f\approx1.6$ THz. In other words, there may be }}
 % TODO scan of spectra for unit cell filling fraction
 
+\paragraph{Effective parameters of a 1-D PhC}
+Employing the \textit{s-parameter} method based on FDTD simulation, as described in Chapter \ref{chapter_sparam}, one can obtain the scattering parameters (complex reflectance and transmittance) of a finite layer of the periodic structure, and eventually retrieve the dispersion curves. 
 
-% todo
+The results for a 
+
 Note that with the correct branch retrieval, the index of refraction never drops with frequency, except for the photonic band gaps; this would otherwise imply the group velocity would be higher than the phase velocity.
 
 
-
-\paragraph{Effective parameters of a 1-D PhC}
-Employing the NRW method described in 
 % the question is in what frequency range they make any physical sense.
 
 
